--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@astrolib/analytics": "^0.5.0",
     "@astrolib/seo": "^1.0.0-beta.5",
     "@fontsource-variable/inter": "^5.0.17",
+    "@splinetool/runtime": "^1.2.4",
     "astro": "^4.5.15",
     "astro-icon": "^1.1.0",
     "limax": "4.1.0",
@@ -32,6 +33,8 @@
     "@astrojs/tailwind": "5.1.0",
     "@iconify-json/flat-color-icons": "^1.1.10",
     "@iconify-json/tabler": "^1.1.109",
+    "@splinetool/react-spline": "^2.2.6",
+    "@splinetool/runtime": "^1.2.4",
     "@tailwindcss/typography": "^0.5.12",
     "@types/js-yaml": "^4.0.9",
     "@types/lodash.merge": "^4.6.9",
